# kiosk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  docs.sh  lint.sh  run.sh
app/: AgendaGrid.qml  AgendaTimeline.qml  CMakeLists.txt  CalendarBridge.cpp  CalendarBridge.h  DashboardData.qml  ErrorBanner.qml  EventEditPopup.qml  Glow.qml  StatRow.qml  main.cpp  main.qml
calendar-sync-client/: CMakeLists.txt
calendar-sync-client/include/calendar-sync-client/: CalendarSyncClient.h  CommandTypes.h
calendar-sync-client/src/: CalendarSyncClient.cpp  CommandTypes.cpp
daemon/: CMakeLists.txt  CalendarClient.cpp  CalendarClient.h  CommandServer.cpp  CommandServer.h  CommandTypes.cpp  CommandTypes.h  Config.cpp  Config.h  GoogleAuth.cpp  GoogleAuth.h  GoogleColorNames.h  SnapshotBuilder.cpp  SnapshotBuilder.h  SnapshotWriter.cpp  SnapshotWriter.h  main.cpp
deploy/: 99-mcp2221.rules  99-native-gpio.rules  README.md  kiosk.service
docker/: Dockerfile  build.Dockerfile  dev.Dockerfile  docs.Dockerfile  lint.Dockerfile
docs/: Doxyfile.calendar-sync-client  Doxyfile.common  Doxyfile.ha-kiosk  Doxyfile.ha-kiosk-google-calendar-sync  Doxyfile.ha-kiosk-weather-sync  Doxyfile.kiosk-log  calendar-sync-client.rst  conf.py  filter-qt-macros.sh  ha-kiosk-google-calendar-sync.rst  ha-kiosk-weather-sync.rst  ha-kiosk.rst  index.rst  kiosk-log.rst
ha-kiosk/: CMakeLists.txt
ha-kiosk-google-calendar-sync/: CMakeLists.txt
ha-kiosk-google-calendar-sync/etc/: daemon-config.example.json
ha-kiosk-google-calendar-sync/etc/logrotate.d/: ha-kiosk-google-calendar-sync
ha-kiosk-google-calendar-sync/etc/systemd/system/: ha-kiosk-google-calendar-sync.service
ha-kiosk-google-calendar-sync/etc/tmpfiles.d/: kiosk.conf
ha-kiosk-google-calendar-sync/lib/include/calendar-sync-client/: CalendarSyncClient.h
ha-kiosk-google-calendar-sync/src/: CalendarClient.cpp  CalendarClient.h  CommandServer.cpp  CommandServer.h  Config.cpp  Config.h  DelegatedAuth.cpp  DelegatedAuth.h  GoogleAuth.cpp  GoogleAuth.h  GoogleColorNames.h  SnapshotBuilder.cpp  SnapshotBuilder.h  SnapshotWriter.cpp  SnapshotWriter.h  main.cpp
ha-kiosk-presence-sync/: CMakeLists.txt
ha-kiosk-presence-sync/etc/: daemon-config.example.json
ha-kiosk-presence-sync/etc/logrotate.d/: ha-kiosk-presence-sync
ha-kiosk-presence-sync/etc/systemd/system/: ha-kiosk-presence-sync.service
ha-kiosk-presence-sync/src/: CameraCapture.cpp  CameraCapture.h  Config.cpp  Config.h  MotionDetector.cpp  MotionDetector.h  SnapshotBuilder.cpp  SnapshotBuilder.h  main.cpp
ha-kiosk-weather-sync/: CMakeLists.txt
ha-kiosk-weather-sync/etc/: daemon-config.example.json
ha-kiosk-weather-sync/etc/logrotate.d/: ha-kiosk-weather-sync
ha-kiosk-weather-sync/etc/systemd/system/: ha-kiosk-weather-sync.service
ha-kiosk-weather-sync/src/: BomClient.cpp  BomClient.h  Config.cpp  Config.h  IconMap.cpp  IconMap.h  InfluxClient.cpp  InfluxClient.h  SnapshotBuilder.cpp  SnapshotBuilder.h  SnapshotWriter.cpp  SnapshotWriter.h  main.cpp
ha-kiosk/etc/logrotate.d/: ha-kiosk
ha-kiosk/etc/systemd/system/: kiosk.service
ha-kiosk/qml/: AgendaTimeline.qml  AttendeeBadges.qml  AuthPromptBanner.qml  CalendarCard.qml  ClimateCard.qml  DashboardCard.qml  DashboardData.qml  ErrorBanner.qml  EventEditPopup.qml  FlowDivider.qml  Glow.qml  LineChart.qml  ShoppingListCard.qml  StatRow.qml  Theme.qml  WeatherCard.qml  main.qml
ha-kiosk/src/: CalendarBridge.cpp  CalendarBridge.h  IdleController.cpp  IdleController.h  PresenceBridge.cpp  PresenceBridge.h  WeatherBridge.cpp  WeatherBridge.h  main.cpp
kiosk-log/: CMakeLists.txt
kiosk-log/include/kiosk-log/: FileLogger.h
kiosk-log/src/: FileLogger.cpp
snapshot-writer/: CMakeLists.txt
snapshot-writer/include/snapshot-writer/: SnapshotWriter.h
snapshot-writer/src/: SnapshotWriter.cpp
